[project]
name = "famly-photos"
version = "1.0.0"
description = "Famly photo downloader with auto-auth and monitoring dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "requests>=2.32.0",
    "jinja2>=3.1.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "Pillow>=10.0.0",
    "python-multipart>=0.0.9",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
